--- a/SanTsgBootcamp.Web/Views/BeginTransaction/BeginTransaction.cshtml
+++ b/SanTsgBootcamp.Web/Views/BeginTransaction/BeginTransaction.cshtml
@@ -96,7 +96,7 @@ button:hover {
             </tr>
             <tr>
                 <td></td>
-                <td><input type="submit" value="Submit"/></td>
+                <td><input  type="submit" value="Register"/></td>
             </tr>
         </table>
         <hr/>
