--- a/SanTsgBootcamp.Web/Views/autocomplete/HotelList.cshtml
+++ b/SanTsgBootcamp.Web/Views/autocomplete/HotelList.cshtml
@@ -47,9 +47,9 @@
   <tr class="header">
      <th >Hotel Name</th>
     <th >Hotel İd</th>
-    <th >city Name</th>
-    <th>city id</th>
-    <th>country name</th>
+    <th >City Name</th>
+    <th>City id</th>
+    <th>Country name</th>
     <th>Options</th>
   </tr>
   @foreach (var item in Model)
