--- a/SanTsgBootcamp.Web/Views/autocomplete/HotelSearch.cshtml
+++ b/SanTsgBootcamp.Web/Views/autocomplete/HotelSearch.cshtml
@@ -52,7 +52,7 @@
 
 <table id="myTable">
   <tr class="header">
-    <th style="width:60%;">Name</th>
+    <th >Name</th>
  
   </tr>
   @foreach (var item in Model)
