--- a/SanTsgBootcamp.Web/Views/CommitTransaction/Commit.cshtml
+++ b/SanTsgBootcamp.Web/Views/CommitTransaction/Commit.cshtml
@@ -4,9 +4,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h3>ReserVation Details</h3>
-<button><a  asp-action="ReservationDetail" asp-controller="GetReservationDetail" asp-route-reservationnumber="@Model.reservationNumber">Details </a></button>
 
 
 
 
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.button {
+  background-color: #4CAF50; 
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: #4CAF50; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+</style>
+</head>
+<body >
+    <div >
+        <h4>Resarvation Details</h4> <br />
+        <button class="button button1"><a  asp-action="ReservationDetail" asp-controller="GetReservationDetail" asp-route-reservationnumber="@Model.reservationNumber">Details</a></button> 
+    </div>
+  
+
+
+
+</body>
+</html>
