--- a/SanTsgBootcamp.Web/Views/Search/Index.cshtml
+++ b/SanTsgBootcamp.Web/Views/Search/Index.cshtml
@@ -68,16 +68,14 @@
 				
 	</tr>
 
-     <td>
-       
-         <a asp-action="HotelList" asp-controller="autocomplete" asp-route-id="Mugla">Muğla</a></td>
+     
     <td>
        
-         <a asp-action="HotelList" asp-controller="autocomplete" asp-route-id="Antalya">Antalya</a></td>
+         <a asp-action="HotelList" asp-controller="autocomplete" asp-route-id="Istanbul">Istanbul</a></td>
 
           <td>
 
-         <a asp-action="HotelList" asp-controller="autocomplete" asp-route-id="Istanbul">İstanbul</a></td>
+         <a asp-action="HotelList" asp-controller="autocomplete" asp-route-id="Antalya">Antalya</a></td>
            <td>
 
          <a asp-action="HotelList" asp-controller="autocomplete" asp-route-id="Ankara">Ankara</a></td>
